--- a/Rmds/10_Load.Rmd
+++ b/Rmds/10_Load.Rmd
@@ -1,4 +1,5 @@
 
+
 ## Reading data file(s)
 
 `DATA_FILES` is read with [edgeR] [@Robinson2010bis] functions to construct the `DEGlist` object using the user-defined function `LoadExpressionData()`.
@@ -27,15 +28,15 @@ for (i in 1:length(UNIQ_FACTORS)) {
 }
 
 # remove unused variables
-rm(DATA_FILES, CHARS_TO_REMOVE, COLUMNS_TO_READ, OTHER_DATA, PKG_UPDATE)
+rm(DATA_FILES, CHARS_TO_REMOVE, COLUMNS_TO_READ, PKG_UPDATE)
 ```
 
 
 Data summary:
 
-Property   | Value
-:--------- | :------
-Genes      | `r dim(x)[1]`
+Property             | Value
+:---------           | :------
+Genes                | `r dim(x)[1]`
 Samples (conditions) | `r dim(x)[2]`
 Unique factors       | `r toString(UNIQ_FACTORS)`
 Colours              | `r toString(unique(EXP_COLORS))`
@@ -46,17 +47,18 @@ Colours              | `r toString(unique(EXP_COLORS))`
 Data will be inspected with three plots.
 
 [START EXPANDIBLE]: #
-`r EXPAND_bx` 
+`r EXPAND_bx`
 Expand to read about <b>library size, MDS and PCA plots</b></summary>
 
-* Raw library sizes to see if they are balanced. 
-`r NOTE_bx` Ideally, library sizes must be similar in all samples to avoid bias in type I error rate and FDR (_false discovery rate_, the type II error rate). Methods better supporting unequal library sizes are `limma::voom()` and `stats::glm()` [@Law2014tt]. They will be used for differential expression in this script.
+* The first plot is for raw library sizes to see if they are balanced. 
+`r NOTE_bx` 
+Ideally, library sizes must be similar in all samples to avoid bias in type I error rate and FDR (_false discovery rate_, the type II error rate). We will see that `limma::lmFit()` after `limma::voom()` is the differential expression method better supporting unequal library sizes [@Law2014tt].
+</div>
 * The _Multidimensional scaling_ (**[MDS]**) scatterplot use a distance matrix to visualise the relative differences in transcriptional profile between the samples. It uses differences in expression profiles between different samples distances calculated on the `top = 500` genes with largest standard deviations across the samples in an iterative process. Replicates are expected to form clusters, that is, [the distance between replicates is shorter than with other samples](https://richardlent.github.io/post/multivariate-analysis-with-r/#multidimensional-scaling). Based on the `limma::plotMDS()` function [@Ritchie2015aa], [MDS] is the **best way to verify sample grouping** when replicates of different treatments are compared since it provides a type of unsupervised clustering of the samples. It is useful for examining how different are the profiles produced by different experimental factors and for identifying unexpected patterns.
 * _Pincipal components analysis_ (**[PCA]**) is an easy and fast way to analyse data by a dimensional reduction of multivariate data, but based on the variance [@Jolliffe2016dp,@Ringner2008aa]. Since replicates should correlate, they are expected to form clusters in a [PCA] because the [principal components are linear combinations of the original variables that maximise the dispersion of samples](https://richardlent.github.io/post/multivariate-analysis-with-r/#principal-components-analysis). The representation shown is based on the RSeqFlow-defined function `PlotMyPCA()` that is a mere wrapper of the R function `stats::prcomp()`.
 
-</details> 
+</details>
 [END EXPANDIBLE]: #
-
 
 
 ```{r sizesMDSplots, fig.width=6, fig.height=5, out.width=c('33%', '33%', '33%'), fig.show='hold'} 
